# park_rubbish

./: README.md
jetson_nano/: README.md
jetsonorinnano/: README.md
jetsonorinnano/park/: bobao.py  ches1.py  photo.py
jetsonorinnano/park/devel/: .catkin
jetsonorinnano/park/devel/lib/park/: yolo_trt
jetsonorinnano/park/devel/lib/pkgconfig/: park.pc  yolov5.pc
jetsonorinnano/park/devel/share/park/cmake/: parkConfig.cmake
jetsonorinnano/park/devel/share/yolov5/cmake/: yolov5Config.cmake
jetsonorinnano/park/src/park/: CMakeLists.txt  README.md
jetsonorinnano/park/src/park/launch/: park_detection.launch
jetsonorinnano/park/src/park/scripts/: sub.py
jetsonorinnano/park/src/park/src/: CNN.cpp  CNN.hpp  common_struct.hpp  main.cpp  postprocess_cuda.cpp  postprocess_cuda.hpp
jetsonorinnano/park/src/park/src/kernels/: get_nms_before_boxes.cu  get_nms_before_boxes.cuh
jetsonorinnano/park/src/yolov5/: CMakeLists.txt  package.xml  yolov5_det.cpp
jetsonorinnano/park/src/yolov5/launch/: park.launch
jetsonorinnano/park/src/yolov5/scripts/: sub.py
jetsonorinnano/park/src/yolov5/src/: config.h  postprocess.cpp
jetsonorinnano/turn_on_wheeltec_robot/launch/: navigation.launch  robot_model_visualization.launch  robot_model_visualization_cx.launch  turn_on_wheeltec_robot.launch  wheeltec_camera.launch  wheeltec_lidar.launch
jetsonorinnano/turn_on_wheeltec_robot/launch/include/: algorithm_hector.launch  base_serial.launch  teb_local_planner.launch
jetsonorinnano/turn_on_wheeltec_robot/map/: WHEELTEC.pgm  WHEELTEC.yaml
jetsonorinnano/turn_on_wheeltec_robot/params_costmap_car/param_wyz/: costmap_car_params.yaml  teb_local_planner_params.yaml
jetsonorinnano/turn_on_wheeltec_robot/params_costmap_common/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
jetsonorinnano/turn_on_wheeltec_robot/params_nav_common/: move_base_params.yaml  teb_local_planner_params copy.yaml  teb_local_planner_params.yaml  teb_local_planner_params（复件）.yaml
jetsonorinnano/turn_on_wheeltec_robot/scripts/: 123.py  all.py  fy.py  sub.py  test2.py
jetsonorinnano/turn_on_wheeltec_robot/urdf/: wyz.urdf
